Tue Mar 14 17:28:35 1995 Keith Vetter (keithv@fusion.com)

	* f_cbc.c, f_cksum.c, f_pcbc.c: added casts so that chars get promoted
           to longs instead of ints when doing 32 bit bit manipulations.

Thu Mar 2 17:50:39 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: changed LIBNAME for the PC.
        * f_tables.h. f_cbc.c: added cast on the assignment of bits of
           a long into characters.
        * string2k.c: promoted an int into a long.

Thu Mar  2 18:09:28 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:30:50 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 00:18:38 1995  John Gilmore  (gnu at toad.com)

	* des_int.h:  Avoid <krb5/...> includes.

Mon Feb 20 16:10:29 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: made to work under windows PC
        * cbc_cksu.c cs_entry.c finish_k.c fin_rndk.c f_cbc.c f_cksum.c 
          f_ecb.c f_parity.c f_pcbc.c f_sched.c init_rke.c key_sche.c 
          new_rn_k.c process_.c random_k.c string2k.c weak_key.c: added
          windows INTERFACE keyword.
        * string2key.c: needed long -> int casts for memset and malloc

Wed Feb  8 13:59:05 1995  Theodore Y. Ts'o  (tytso@dcl)

	* des.h: Add KRB5_INT32 definitions for non-32 int platforms.

Fri Feb  3 06:33:22 1995  Theodore Y. Ts'o  (tytso@dcl)

	* des_int.h: Remove unused cruft from the file.

	* verify.c: Fix typo; "%02 X" --> "%02X"

Wed Jan 25 20:04:39 1995  John Gilmore  (gnu at toad.com)

	* cbc_cksum.c, cs_entry.c, des.h, destest.c, f_sched.c,
	fin_rndkey.c, finish_key.c, init_rkey.c, key_sched.c,
	new_rn_key.c, process_ky.c, random_key.c, string2key.c, verify.c,
	weak_key.c: Replace <.../...> includes with "..."s.

Wed Jan 25 16:54:40 1995  Chris Provenzano (proven@mit.edu)

        * Removed all narrow types and references to wide.h and narrow.h
